# simple-calculator

./: .gitignore  Cargo.toml  Packager.toml  README.md
.cargo/: config.toml
icons/: Calculator.icns
ui/: app-window.slint
